# verifyTrusty

./: CMakeLists.txt
scripts/: get_exper_res.py
seahorn/: CMakeLists.txt  sea_base.yaml  sea_crab_base.yaml
seahorn/keymaster/: CMakeLists.txt
seahorn/keymaster/jobs/ipc/: CMakeLists.txt  harness.cpp
seahorn/keymaster/stubs/: CMakeLists.txt
seahorn/storage/: CMakeLists.txt
seahorn/storage/jobs/ipc/event_loops/: CMakeLists.txt  event_loops_harness.c
seahorn/storage/jobs/ipc/indirect_handlers/: CMakeLists.txt  indirect_handlers_harness.c
seahorn/storage/jobs/ipc/msg_buffer/: CMakeLists.txt
seahorn/storage/jobs/ipc/multiple_ports/: CMakeLists.txt  multiple_ports_harness.c
seahorn/storage/jobs/rpmb/rpmb_program_key/: CMakeLists.txt  rpmb_program_key_harness.c
seahorn/storage/jobs/rpmb/rpmb_read/: CMakeLists.txt  rpmb_read_harness.c
seahorn/storage/jobs/rpmb/rpmb_read_no_mac/: CMakeLists.txt  rpmb_read_no_mac_harness.c
seahorn/storage/jobs/rpmb/rpmb_send/: CMakeLists.txt  rpmb_send_harness.c
seahorn/storage/jobs/rpmb/rpmb_verify/: CMakeLists.txt  rpmb_verify_harness.c
seahorn/storage/jobs/rpmb/rpmb_write/: CMakeLists.txt  rpmb_write_harness.c
seahorn/storage/jobs/tipc_ns/open_close_file/: CMakeLists.txt  tipc_ns_open_close_file_harness.c
seahorn/storage/jobs/tipc_ns/open_file/: CMakeLists.txt  tipc_ns_open_file_harness.c
seahorn/storage/jobs/tipc_ns/read_ops/: CMakeLists.txt  tipc_ns_read_ops_harness.c
seahorn/storage/jobs/tipc_ns/write_ops/: CMakeLists.txt  tipc_ns_write_ops_harness.c
seahorn/storage/lib/: sea_ipc_helper.c
seahorn/storage/stubs/: CMakeLists.txt  rpmb_mac_override.c
seahorn/trusty/: CMakeLists.txt
seahorn/trusty/kernel/lib/: CMakeLists.txt
seahorn/trusty/kernel/lib/include/: platform.h
seahorn/trusty/kernel/lib/include/arch/: usercopy.h
seahorn/trusty/kernel/lib/include/kernel/: mutex.h  thread.h
seahorn/trusty/kernel/lib/include/shared/lk/: trace.h
seahorn/trusty/kernel/lib/include/sys/: types.h
seahorn/trusty/kernel/lib/iovec/: CMakeLists.txt
seahorn/trusty/kernel/lib/iovec/kern_iovec_to_membuf/: CMakeLists.txt  kern_iovec_to_membuf_harness.c
seahorn/trusty/kernel/lib/iovec/membuf_to_kern_iovec/: CMakeLists.txt  membuf_to_kern_iovec_harness.c
seahorn/trusty/kernel/lib/iovec/membuf_to_user_iovec/: CMakeLists.txt  membuf_to_user_iovec_harness.c
seahorn/trusty/kernel/lib/iovec/user_iovec_to_membuf/: CMakeLists.txt  user_iovec_to_membuf_harness.c
seahorn/trusty/kernel/lib/iovec/vqueue_init/: CMakeLists.txt  vqueue_init_harness.c
seahorn/trusty/kernel/lib/stubs/: CMakeLists.txt  arch_copy_from_user_override.c  arch_copy_to_user_override.c  mutex_override.c
seahorn/trusty/user/base/include/: trusty_ipc.h  trusty_log.h
seahorn/trusty/user/base/lib/libc-trusty/: CMakeLists.txt  crab_handle_table.c  crab_handle_table.h  crab_trusty_syscalls_impl.c  sea_handle_table.c  sea_handle_table.h  trusty_syscalls_impl.c
seahorn/trusty/user/base/lib/libc-trusty/proof/: CMakeLists.txt
seahorn/trusty/user/base/lib/libc-trusty/proof/chan_msg_sync/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_accept/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_close/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_connect/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_create/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_get_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_put_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_read_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_send_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_set_cookie/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_wait/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_wait_any/: CMakeLists.txt  main.c
seahorn/trusty_common/include/: config.h.in
seahorn/trusty_common/lib/: CMakeLists.txt  bcmp.c  bounds.c  nd_clam.c
seahorn/trusty_common/stubs/: CMakeLists.txt
